# HTN2025

./: .env  .gradio_settings.json  README.md
backend/: .gitignore  app.py  email_ai.py  main.py  pyproject.toml  reservation_agent.py  test_flask.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: App.tsx  firebase.tsx  globals.css  layout.tsx
frontend/src/app/hoam/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/homeSlice/: page.tsx
frontend/src/app/homepage/: page.tsx
frontend/src/app/homey/: page.tsx
frontend/src/app/homie/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/routeplan/: page.tsx
frontend/src/app/routeplanner/: page.tsx
frontend/src/components/: PreferencesManager.tsx  VapiButton.tsx
frontend/src/components/ui/: calendar.tsx  date-picker.tsx
frontend/src/hooks/: useVapi.tsx
frontend/src/services/: customerPreferences.ts
frontend/src/types/: vapi.ts
