[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cua-agent[all]>=0.4.31",
    "cua-computer[ui]>=0.4.5",
    "fastapi[standard]>=0.116.1",
    "flask>=3.1.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
